--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon -e * server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +14,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemailer": "^6.3.0",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "useful-nunjucks-filters": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
